[package]
name = "qpx"
version = "0.1.0"
edition = "2021"
default-run = "qpx"

[[bin]]
name = "lveditor"
path = "lveditor/main.rs"

[[bin]]
name = "lved_egui"
path = "lved_egui/main.rs"

[dependencies]
bevy = { version = "0.15", features = [
    "dynamic_linking",
    "bevy_dev_tools",
    "shader_format_spirv",
    "wayland",
    "jpeg"
] }
bevy_single = "0.1.0"
bevy_image = "0.15"
bevy_schedules_ext = "0.14.1"
bevy_rapier2d = { version = "0.28.0", features = ["parallel", "simd-stable", "debug-render-2d"] }
# avian2d = { version = "0.1.2", features = ["simd"] }
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
bevy_mod_billboard = "0.7.0"
toml = "0.8"
#[dependencies.lved_egui]
eframe = { version = "0.30", features = [
    "default"
] }

# For image support:
egui_extras = { version = "0.30", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
