[package]
name = "qpx"
version = "0.1.0"
edition = "2024"
default-run = "qpx"

[[bin]]
name = "lved_egui"
path = "lved_egui/main.rs"

[dependencies]
bevy = { version = "*", features = [
    "dynamic_linking",
    "bevy_dev_tools",
    "shader_format_spirv",
    "wayland",
    "jpeg"
] }
bevy_single = "*"
bevy_image = "*"
bevy_schedules_ext = "*"
bevy_rapier2d = { version = "*", features = ["parallel", "simd-stable", "debug-render-2d"] }
serde = "*"
serde_json = "*"
rand = "*"
rand_chacha = "*"
bevy_mod_billboard = "*"
toml = "*"

#[dependencies.lved_egui]
eframe = "*"
egui_extras = { version = "*", features = ["image"] }
env_logger = { version = "*", default-features = false, features = ["auto-color", "humantime"] }
